objects/Zoho_Logs__c.object
<CustomObject>
    <description>Zoho Logs</description>
    <fields>
        <fullName>Contact_Record_Id__c</fullName>
        <description>Contact Record Id</description>
        <inlineHelpText>Contact Record Id</inlineHelpText>
        <label>Contact Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Operation performing</description>
        <inlineHelpText>Operation performing</inlineHelpText>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_URL__c</fullName>
        <description>Request URL</description>
        <inlineHelpText>Request URL</inlineHelpText>
        <label>Request URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>Status Code</description>
        <inlineHelpText>Status Code</inlineHelpText>
        <label>Status Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <description>Status Message</description>
        <inlineHelpText>Status Message</inlineHelpText>
        <label>Status Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Stamp__c</fullName>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <label>Zoho Logs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Time_Stamp__c</columns>
        <columns>Contact_Record_Id__c</columns>
        <columns>Operation__c</columns>
        <columns>Request_URL__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>hi</language>
    </listViews>
    <nameField>
        <label>Zoho Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoho Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>